src/objects/User_Adoption_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Adoption_Metric_User__c</fullName>
        <label>Adoption Metric User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <defaultValue>Today() - 1</defaultValue>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Contact_Updates__c</fullName>
        <label>No of Contact Updates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Activity_Updates__c</fullName>
        <label>No of Activity Updates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Pitch_Stage_Updates__c</fullName>
        <label>No of Pitch Stage Updates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Pitches_Owned__c</fullName>
        <label>No of Pitches Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_User_Logins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of User Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Adoption_Score__c</fullName>
        <formula>No_of_Pitches_Owned__c +  No_of_Pitch_Stage_Updates__c +  No_Of_Contact_Updates__c +  No_of_Activity_Updates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Adoption Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>User Adoption Metrics</label>
    <nameField>
        <displayFormat>UAM-{000000000}</displayFormat>
        <label>User Adoption Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Adoption Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>